Added go back button, edited templates and added allowed hosts in settings.py

--- a/Project/main/templates/main/participants.html
+++ b/Project/main/templates/main/participants.html
@@ -17,7 +17,7 @@ List of Participants
         </ul>
       </div>
 </div>
-    {% for friend in friends %}
-
-    {% endfor %}
+<div class="p-3">
+    <a href="{% url 'classroom' class.id %}">Go back to {{ class.name }}</a>
+</div>
 {% endblock %}
